--- a/index.html
+++ b/index.html
@@ -8,5 +8,42 @@
 <body>
     <br>
     <hr>
+    <h1><b>HADHBI MOHAMMED SEYF </b></h1>
+    <P style="color: green;">junior front-end devloper </P>
+    <br>
+    <p>123 my street </p>
+    <p>my city st 12345</p>
+    <p>my phone number </p>
+    <p>www gkhdgq@gmail.com</p>
+    <br>
+    <p style="color: green;">skills </p>
+    <p>html css javaScript postgresql.....</p>
+    <br>
+    <p style="color: green;">Education </p>
+    <p style="color: blue;">School name location degree </p>
+     <p>month 20xx month 20xx</p>
+     <p>list of exciting things you did at university </p>
+     <br>
+     <p style="color: green;">Experience </p>
+     <p style="color: blue;">company name location _job title </p>
+     <p>month 20xx month 20xx</p>
+     <ul>
+        <li>list of achivements </li>
+        <li>list of achivements </li>
+        <li>list of achivements </li>
+     </ul>
+      <p>skills : list of skills used or gained at this company </p>
+      <br>
+      <p style="color: blue;">company name location _job title </p>
+     <p>month 20xx month 20xx</p>
+     <ul>
+        <li>list of achivements </li>
+        <li>list of achivements </li>
+        <li>list of achivements </li>
+     </ul>
+      <p>skills : list of skills used or gained at this company </p>
+      <br> 
+      <p style="color: green;">across the internet </p>
+       <p>add your linkdin github profil links </p>
 </body>
 </html>
